<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NJU</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nickname">shero</string>
    <string name="female">女</string>
    <string name="home">首页</string>
    <string name="society">社团信息</string>
    <string name="jiaowu">教务信息</string>
    <string name="jiangzuo">讲座信息</string>
    <string name="zhaopin">校园招聘</string>
    <string name="qiusai">球赛信息</string>
    <string name="shangjia">附近商家</string>
    <string name="tuandui">校园团队</string>
    <string name="qita">其他活动</string>
    <string name="collect">我的收藏</string>
    <string name="search">搜索</string>
    <string name="myInfo">个人资料</string>
    <string name="settings">设置</string>
    <string name="myname">姓名</string>    
    <string name="sex">性别</string>
    <string name="mygrade">年级</string>
    <string name="studentID">学号</string>    
    <string name="mydepartment">院系</string>

</resources>
