<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
   <!-- 
    <LinearLayout 
        android:id="@+id/btn_home"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_drawer_menu">
              
         <Button
        style="@style/drawerMenuButton"
        android:text="@string/home"
        android:background="@null"
        android:clickable="false"
        android:drawableLeft="@drawable/ic_menu_home"
        ></Button>        
     </LinearLayout>
     <LinearLayout 
        android:id="@+id/btn_society"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_drawer_menu">
              
         <Button
        style="@style/drawerMenuButton"
        android:text="@string/society"
        android:background="@null"
        android:clickable="false"
        android:drawableLeft="@drawable/repost_light"
        ></Button>        
     </LinearLayout>
      <LinearLayout 
        android:id="@+id/btn_jiaowu"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_drawer_menu">
              
         <Button
        style="@style/drawerMenuButton"
        android:text="@string/jiaowu"
        android:background="@null"
        android:clickable="false"
        android:drawableLeft="@drawable/comment_light"
        ></Button>        
     </LinearLayout>
      -->  
     <LinearLayout
         android:orientation="vertical"
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <Button
        android:id="@+id/btn_home"
        style="@style/drawerMenuButton"
        android:text="@string/home"
        android:drawableLeft="@drawable/ic_menu_home"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_society"
        style="@style/drawerMenuButton"
        android:text="@string/society"
        android:drawableLeft="@drawable/repost_light"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_jiaowu"
        style="@style/drawerMenuButton"
        android:text="@string/jiaowu"
        android:drawableLeft="@drawable/comment_light"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_jiangzuo"
        style="@style/drawerMenuButton"
        android:text="@string/jiangzuo"
        android:drawableLeft="@drawable/edit_light"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_zhaopin"
        style="@style/drawerMenuButton"
        android:text="@string/zhaopin"
        android:drawableLeft="@drawable/location_map_light"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_qiusai"
        style="@style/drawerMenuButton"
        android:text="@string/qiusai"
        android:drawableLeft="@drawable/statusnewactivity_gps_light"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_shangjia"
        style="@style/drawerMenuButton"
        android:text="@string/shangjia"
        android:drawableLeft="@drawable/statusnewactivity_send_light"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_tuandui"
        style="@style/drawerMenuButton"
        android:text="@string/tuandui"
        android:drawableLeft="@drawable/share_light"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_qita"
        style="@style/drawerMenuButton"
        android:text="@string/qita"
        android:drawableLeft="@drawable/ic_menu_message"
        android:layout_width="match_parent"
         ></Button>
    <!-- 
     <Button
        android:id="@+id/btn_collect"
        style="@style/drawerMenuButton"
        android:text="@string/collect"
        android:drawableLeft="@drawable/ic_menu_fav"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_myInfo"
        style="@style/drawerMenuButton"
        android:text="@string/myInfo"
        android:drawableLeft="@drawable/ic_menu_profile"
        android:layout_width="match_parent"
         ></Button>
     <Button
        android:id="@+id/btn_search"
        style="@style/drawerMenuButton"
        android:text="@string/search"
        android:drawableLeft="@drawable/ic_menu_search"
        android:layout_width="match_parent"
         ></Button>
   	<Button
        android:id="@+id/btn_settings"
        style="@style/drawerMenuButton"
        android:text="@string/settings"
        android:drawableLeft="@drawable/ic_menu_settings"
        android:layout_width="match_parent"
         ></Button>
     -->
   	</LinearLayout>
    

</merge>
